<resources>
    <string name="app_name">Nurture</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_give">GiveActivity</string>
    <string name="title_activity_receive">ReceiveActivity</string>
    <string name="login">Login</string>
    <string name="intro">Plant the seed of kindness in your community.</string>
    <string name="signup">New to Nurture? Sign up here.</string>
    <string name="join">Join Nurture</string>
    <string name="user">Username</string>
    <string name="create">Create</string>
    <string name="pass">Password</string>
    <string name="cPass">Confirm Password</string>
    <string name="email">Email</string>
    <string name="subtitle">Do a kind act for someone today</string>
    <string name="img_test">Test for Image</string>
    <string name="receive_help">Receive Help</string>
    <string name="help_someone">Help Someone</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="school">School</string>
    <string name="role">Role</string>
    <string name="suggestive_heading">Suggested Acts of Kindness:</string>
    <string name="title_activity_achievements">AchievementsActivity</string>
    <string name="title_activity_tutorial">TutorialActivity</string>

</resources>
