<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.matthew.homework4.signUpActivity"
>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/join"
        android:id="@+id/tv4"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="40dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/UsernameBlank"
        android:hint="@string/user"
        android:textSize="25dp"
        android:singleLine="true"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:maxLength="16"
        android:maxLines="1"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:id="@+id/CreateButton"
        android:layout_alignParentBottom="true"
        android:textSize="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#ffffffff"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/PasswordBlank"
        android:hint="@string/pass"
        android:textSize="25dp"
        android:layout_below="@+id/UsernameBlank"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/UsernameBlank"
        android:layout_alignEnd="@+id/UsernameBlank"
        android:layout_marginTop="15dp"
        android:maxLines="1"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/PasswordBlank2"
        android:hint="@string/cPass"
        android:textSize="25dp"
        android:layout_below="@+id/PasswordBlank"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/PasswordBlank"
        android:layout_alignEnd="@+id/PasswordBlank"
        android:layout_marginTop="15dp"
        android:maxLines="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/subtitle"
        android:id="@+id/textView2"
        android:textSize="23dp"
        android:layout_below="@+id/tv4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="italic" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/EmailBlank"
        android:hint="@string/email"
        android:textSize="25dp"
        android:layout_below="@+id/PasswordBlank2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/PasswordBlank2"
        android:layout_alignEnd="@+id/PasswordBlank2"
        android:layout_marginTop="15dp"
        android:inputType="textEmailAddress"
        android:maxLines="1"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/SchoolBlank"
        android:hint="@string/school"
        android:textSize="25dp"
        android:maxLines="1"
        android:layout_below="@+id/EmailBlank"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/roleButton"
        android:hint="@string/role"
        android:textSize="25dp"
        android:maxLines="1"
        android:layout_below="@+id/SchoolBlank"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true" />

</RelativeLayout>
